# buskei-backend-fastapi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/core/: config.py
app/modules/auth/application/dtos/: register_dto.py
app/modules/auth/application/usecases/: __init__.py  get_current_user_usecase.py  login_usecase.py  logout_usecase.py  register_usecase.py
app/modules/auth/domain/value_objects/: plain_password_vo.py
app/modules/auth/infrastructure/: __init__.py
app/modules/auth/infrastructure/models/: user_model.py
app/modules/auth/infrastructure/repositories/: user_repository_impl.py
app/modules/auth/infrastructure/security/: __init__.py  jwt_handler.py
app/modules/auth/presentation/dependencies/: auth_deps.py
app/modules/auth/presentation/routes/: auth_routes.py
app/modules/auth/presentation/schemas/: login_schema.py
app/routes/: auth_routes.py
app/shared/infrastructure/database/: base.py
app/shared/presentation/middlewares/: auth_middleware.py  error_handler.py
